# hex_war

./: Cargo.toml  todo.txt
src/: app_event_adapter.rs  app_init_error.rs  coords.rs  event_loop.rs  graphics.rs  main.rs  screen_coords.rs
src/app/: mod.rs  status.rs
src/graphics/: camera.rs  error.rs  geometry.rs  ivec.rs  material.rs  mod.rs  render.rs  scene.rs  sprite2d.rs  texture.rs
src/graphics/backend/: mod.rs
src/graphics/backend/vulkan/: async_tasker.rs  entry.rs  geometry_manager.rs  mod.rs  renderer.rs  scene_manager.rs  texture_manager.rs  utils.rs
src/graphics/backend/vulkan/texture/: loader.rs  mod.rs
src/graphics/backend/vulkan/vk/: instance.rs  mod.rs  pdevice.rs
src/graphics/low_level/: mod.rs  render_data.rs
src/graphics/manager/: geometry_manager.rs  manage_geometries.rs  manage_scenes.rs  manage_textures.rs  mod.rs  texture_manager.rs
src/graphics/primitive/: mod.rs  sprite2d.rs  square.rs
src/graphics/proxy/: geometry_manager.rs  mod.rs  scene_manager.rs  texture_manager.rs
src/graphics/resources/: geometry.rs  material.rs  mod.rs  scene.rs  texture.rs  view.rs
src/hex_war_app/: cursor.rs  event.rs  graphics.rs  mod.rs  ortho_camera.rs  planar_camera.rs  state.rs  update_timer.rs
src/hex_war_app/main_menu/: cursor.rs  mod.rs
src/hex_war_app/main_menu/page/: main_page.rs  mod.rs
src/hex_war_app/rendering/: log_renderers.rs  mod.rs  sprite_cursor.rs
src/math/: mod.rs  screen_coords.rs  world_coords.rs
