[package]
name = "hex_war"
version = "0.1.0"
authors = ["f3kilo <f3kilo@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_warn"] }
slog-term = "2.5.0"
slog-async = "2.5.0"
winit = "0.22.1"
tinyfiledialogs = "3.3.9"